Implemented more RESTful API methods and endpoints for client and server (#179)
* uri -> base_url

* added more endpoints to API spec

* added APIClient class

* removed server.daemon module

* added client errors module

* added WIP BugManager to client module

* updated client module

* added client module to setup.py

* updated API client to accept path strings rather than path components

* added from_dict and to_dict to Bug

* added to_dict to compiler objects

* added to_dict methods to testing module

* removed debugging statement from Bug.from_dict

* implemented bug.build endpoint

* implemented /bugs/<uid>/installed endpoint

* implemented /bugs/<uid>/coverage endpoint

* added basic container manager to client module

* added container provision endpoint

* implemented is_installed endpoint

* added extra error codes

* added image section to API spec.

* added to_dict to Container

* added from_dict to Container

* fixed name of method that implements an endpoint

* modified Container.tools to return a list

* modified provision to return 200 status code

* updated provision endpoint in client module

* implemented GET /containers/<uid> route

* added __getitem__ to container manager in client module

* added container deletion to client module

* added __contains__ to container manager in client module

* added is_alive endpoint to server module

* added is_alive method to container manager in client module

* updated API spec with GET /containers/<id>/alive

* added json keyword argument to APIClient

* added exec method to container manager in client module

* implemented exec endpoint in server module

* implemented exec endpoint in client module

* added exec to API spec.

* added WIP test endpoint to container manager in client module

* added TEST_NOT_FOUND to error codes

* added alias for command in container manager

* added missing type sig

* fixed aliases i
